first score - 25 fixed with parameters in py file

--- a/ex3/rag_system.ipynb
+++ b/ex3/rag_system.ipynb
@@ -67,131 +67,16 @@
       "metadata": {},
       "outputs": [],
       "source": [
-        "!pip install -q gdown\n",
-        "!gdown --folder https://drive.google.com/drive/folders/1hsoDVKA2qufioETs8ktjtSDoaQlcLoL4?usp=sharing\n",
-        "\n",
-        "# Verify rag_system.py was downloaded\n",
-        "import os\n",
-        "rag_system_paths = [\n",
-        "    \"/content/wet/rag_system.py\",\n",
-        "    \"./rag_system.py\",\n",
-        "    \"/content/rag_system.py\"\n",
-        "]\n",
-        "\n",
-        "rag_system_found = False\n",
-        "for path in rag_system_paths:\n",
-        "    if os.path.exists(path):\n",
-        "        print(f\"✅ Found rag_system.py at: {path}\")\n",
-        "        rag_system_found = True\n",
-        "        break\n",
-        "\n",
-        "if not rag_system_found:\n",
-        "    print(\"⚠️  rag_system.py not found in downloaded folder\")\n",
-        "    print(\"💡 If you added rag_system.py to the Drive folder, make sure:\")\n",
-        "    print(\"   1. The file is named exactly 'rag_system.py'\")\n",
-        "    print(\"   2. The file is in the same folder as train.csv and test.csv\")\n",
-        "    print(\"   3. The folder is shared with the same permissions\")\n",
-        "    print(\"\\n📥 You can also download it manually by:\")\n",
-        "    print(\"   - Getting the file ID from Google Drive\")\n",
-        "    print(\"   - Running: !gdown --id <FILE_ID> -O /content/wet/rag_system.py\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# ============================================================================\n",
-        "# LOAD CSV FILES\n",
-        "# ============================================================================\n",
-        "# Files should be in the same folder as this notebook (ex3/)\n",
-        "# This code will automatically find them\n",
-        "#\n",
-        "# If you know the exact path, uncomment and set it below:\n",
-        "# TRAIN_CSV_PATH = \"/content/train.csv\"  # or your specific path\n",
-        "# TEST_CSV_PATH = \"/content/test.csv\"    # or your specific path\n",
+        "# Read the CSV files\n",
         "\n",
         "import pandas as pd\n",
         "import json\n",
         "import os\n",
         "from pathlib import Path\n",
+        "df_train = pd.read_csv(\"./train.csv\", converters={\"answers\": json.loads})\n",
+        "df_test = pd.read_csv(\"./test.csv\")\n",
         "\n",
-        "# Get current working directory\n",
-        "current_dir = os.getcwd()\n",
-        "print(f\"Current working directory: {current_dir}\")\n",
-        "\n",
-        "# If you specified custom paths above, use them\n",
-        "if 'TRAIN_CSV_PATH' in globals() and 'TEST_CSV_PATH' in globals():\n",
-        "    train_path = \"./train.csv\"\n",
-        "    test_path = \"./test.csv\"\n",
-        "    print(f\"✅ Using custom paths:\")\n",
-        "    print(f\"   Train: {train_path}\")\n",
-        "    print(f\"   Test: {test_path}\")\n",
-        "else:\n",
-        "    # Try multiple possible locations for the CSV files\n",
-        "    # Priority: same directory as notebook, then /content/, then current dir\n",
-        "    possible_locations = [\n",
-        "        \".\",  # Current directory (where notebook is)\n",
-        "        \"/content\",  # Colab default\n",
-        "        \"/content/wet/\",  # If synced to ex3 folder\n",
-        "        str(Path(__file__).parent) if '__file__' in globals() else None,  # Notebook's directory (if available)\n",
-        "    ]\n",
-        "\n",
-        "    train_path = None\n",
-        "    test_path = None\n",
-        "\n",
-        "    # Search for files\n",
-        "    print(\"\\n🔍 Searching for CSV files...\")\n",
-        "    for location in possible_locations:\n",
-        "        if location is None:\n",
-        "            continue\n",
-        "        \n",
-        "        train_candidate = os.path.join(location, \"train.csv\")\n",
-        "        test_candidate = os.path.join(location, \"test.csv\")\n",
-        "        \n",
-        "        if os.path.exists(train_candidate) and os.path.exists(test_candidate):\n",
-        "            train_path = train_candidate\n",
-        "            test_path = test_candidate\n",
-        "            print(f\"✅ Found files in: {location}\")\n",
-        "            break\n",
-        "        elif os.path.exists(train_candidate) or os.path.exists(test_candidate):\n",
-        "            print(f\"  ⚠️  Partial match in {location} (one file found)\")\n",
-        "\n",
-        "# If not found, show what's available\n",
-        "if train_path is None:\n",
-        "    print(\"\\n❌ CSV files not found in common locations.\")\n",
-        "    print(\"\\n📁 Checking available directories...\")\n",
-        "    for location in possible_locations:\n",
-        "        if location and os.path.exists(location):\n",
-        "            files = os.listdir(location)\n",
-        "            csv_files = [f for f in files if f.endswith('.csv')]\n",
-        "            if csv_files:\n",
-        "                print(f\"  {location}: {csv_files}\")\n",
-        "    \n",
-        "    print(\"\\n💡 Solutions:\")\n",
-        "    print(\"  1. Make sure train.csv and test.csv are in the same folder as this notebook\")\n",
-        "    print(\"  2. Or run the upload cell (previous cell) to upload files to Colab\")\n",
-        "    print(\"  3. Or specify the exact path below:\")\n",
-        "    print(\"\\n     # Uncomment and set your path:\")\n",
-        "    print(\"     # train_path = '/path/to/train.csv'\")\n",
-        "    print(\"     # test_path = '/path/to/test.csv'\")\n",
-        "    \n",
-        "    raise FileNotFoundError(\"Could not find train.csv and test.csv\")\n",
-        "\n",
-        "# Read the CSV files\n",
-        "print(f\"\\n📂 Loading CSV files from: {os.path.dirname(train_path)}\")\n",
-        "df_train = pd.read_csv(train_path, converters={\"answers\": json.loads})\n",
-        "df_test = pd.read_csv(test_path)\n",
-        "\n",
-        "print(f\"\\n✅ Successfully loaded:\")\n",
-        "print(f\"  - Training data: {len(df_train)} rows from {train_path}\")\n",
-        "print(f\"  - Test data: {len(df_test)} rows from {test_path}\")\n",
-        "print(f\"\\n📊 Preview:\")\n",
-        "print(f\"\\nFirst few training examples:\")\n",
-        "print(df_train.head(2))\n",
-        "print(f\"\\nFirst few test examples:\")\n",
-        "print(df_test.head(2))\n"
+        "print(f\"\\n✅ Successfully loaded:\")\n"
       ]
     },
     {
@@ -297,6 +182,7 @@
         "        self.BM25_K1 = BM25_K1\n",
         "        self.BM25_B = BM25_B\n",
         "        self.CONTEXT_LENGTH = CONTEXT_LENGTH\n",
+        "        self.CONTEXT_TOP_N = CONTEXT_TOP_N\n",
         "        self.CHECKPOINT_FILE = Path(CHECKPOINT_FILE)\n",
         "        self.RESUME_FROM_CHECKPOINT = RESUME_FROM_CHECKPOINT\n",
         "\n",
@@ -342,6 +228,10 @@
         "        except Exception as e:\n",
         "            print(f\"Warning: Could not retrieve document {hit.docid}: {e}\")\n",
         "            continue\n",
+        "    \n",
+        "    # Limit to top N contexts (if configured)\n",
+        "    if CONTEXT_TOP_N > 0 and len(contexts) > CONTEXT_TOP_N:\n",
+        "        contexts = contexts[:CONTEXT_TOP_N]\n",
         "    \n",
         "    # Print contexts for debugging if enabled\n",
         "    # Use tqdm.write() to ensure output appears above progress bar\n",
@@ -655,14 +545,14 @@
         "for index, row in tqdm(df_test.iterrows(), total=len(df_test), desc=\"Processing\"):\n",
         "    qid = row['id']\n",
         "    question = row['question']\n",
-        "    \n",
+        "\n",
         "    # Skip if already processed\n",
         "    if qid in processed_ids:\n",
         "        continue\n",
-        "    \n",
+        "\n",
         "    # Retrieve context using wrapper function\n",
         "    contexts = get_context_wrapper(searcher, question, k=K, retrieval_method=RETRIEVAL_METHOD)\n",
-        "    \n",
+        "\n",
         "    if not contexts:\n",
         "        answer = \"I don't know\"\n",
         "    else:\n",
@@ -678,10 +568,10 @@
         "        )\n",
         "        generated_text = outputs[0][\"generated_text\"][-1].get('content', '')\n",
         "        answer = extract_answer(generated_text)\n",
-        "    \n",
+        "\n",
         "    predictions[qid] = answer\n",
         "    processed_ids.add(qid)\n",
-        "    \n",
+        "\n",
         "    # Save checkpoint periodically\n",
         "    if len(predictions) % SAVE_CHECKPOINT_EVERY == 0:\n",
         "        save_checkpoint_wrapper(predictions, list(processed_ids))\n",
@@ -690,36 +580,6 @@
         "save_checkpoint_wrapper(predictions, list(processed_ids))\n",
         "\n",
         "print(\"\\n✅ Processing complete!\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# ============================================================================\n",
-        "# CLEANUP: Delete old checkpoint and prediction files before training evaluation\n",
-        "# ============================================================================\n",
-        "from pathlib import Path\n",
-        "import os\n",
-        "\n",
-        "train_checkpoint_file = Path(CHECKPOINT_FILE).parent / \"train_checkpoint.json\"\n",
-        "\n",
-        "files_to_delete = [\n",
-        "    train_checkpoint_file,\n",
-        "    Path(PREDICTIONS_CSV),  # Also delete any old predictions\n",
-        "]\n",
-        "\n",
-        "print(\"🧹 Cleaning up old files before training evaluation...\")\n",
-        "for file_path in files_to_delete:\n",
-        "    if file_path.exists():\n",
-        "        file_path.unlink()\n",
-        "        print(f\"  ✅ Deleted: {file_path}\")\n",
-        "    else:\n",
-        "        print(f\"  ℹ️  Not found (already clean): {file_path}\")\n",
-        "\n",
-        "print(\"✅ Cleanup complete. Ready for fresh training evaluation.\")\n"
       ]
     },
     {
@@ -748,93 +608,6 @@
         "df_prediction.to_csv(PREDICTIONS_CSV, index=False)\n",
         "print(f\"✅ Predictions saved to {PREDICTIONS_CSV}\")\n",
         "print(f\"Total predictions: {len(df_prediction)}\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "from google.colab import files\n",
-        "files.download('predictions.csv')"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "# ============================================================================\n",
-        "# CLEANUP: Delete old checkpoint and prediction files before test processing\n",
-        "# ============================================================================\n",
-        "from pathlib import Path\n",
-        "import os\n",
-        "\n",
-        "files_to_delete = [\n",
-        "    Path(CHECKPOINT_FILE),\n",
-        "    Path(PREDICTIONS_CSV),\n",
-        "]\n",
-        "\n",
-        "print(\"🧹 Cleaning up old files before test processing...\")\n",
-        "for file_path in files_to_delete:\n",
-        "    if file_path.exists():\n",
-        "        file_path.unlink()\n",
-        "        print(f\"  ✅ Deleted: {file_path}\")\n",
-        "    else:\n",
-        "        print(f\"  ℹ️  Not found (already clean): {file_path}\")\n",
-        "\n",
-        "print(\"✅ Cleanup complete. Ready for fresh test processing.\")\n"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import os\n",
-        "import pandas as pd\n",
-        "\n",
-        "# Check if file exists\n",
-        "file_path = './predictions.csv'\n",
-        "if os.path.exists(file_path):\n",
-        "    size = os.path.getsize(file_path)\n",
-        "    abs_path = os.path.abspath(file_path)\n",
-        "    print(f\"✅ File found!\")\n",
-        "    print(f\"📁 Path: {abs_path}\")\n",
-        "    print(f\"📊 Size: {size:,} bytes\")\n",
-        "    \n",
-        "    # Show first few rows\n",
-        "    df = pd.read_csv(file_path)\n",
-        "    print(f\"\\n📋 Preview (first 5 rows):\")\n",
-        "    print(df.head())\n",
-        "else:\n",
-        "    print(\"❌ File not found. Make sure you ran the prediction cells.\")"
-      ]
-    },
-    {
-      "cell_type": "code",
-      "execution_count": null,
-      "metadata": {},
-      "outputs": [],
-      "source": [
-        "import pandas as pd\n",
-        "\n",
-        "# Read the file\n",
-        "df = pd.read_csv('./predictions.csv')\n",
-        "\n",
-        "# Get the CSV as a string\n",
-        "csv_content = df.to_csv(index=False)\n",
-        "\n",
-        "print(\"=\"*80)\n",
-        "print(\"COPY THIS ENTIRE OUTPUT AND SAVE AS predictions.csv\")\n",
-        "print(\"=\"*80)\n",
-        "print(csv_content)\n",
-        "print(\"=\"*80)\n",
-        "print(f\"\\n✅ Total rows: {len(df)}\")\n",
-        "print(f\"📏 Content length: {len(csv_content)} characters\")"
       ]
     }
   ],
