--- a/ex4/LightGBMRankingSearch.ipynb
+++ b/ex4/LightGBMRankingSearch.ipynb
@@ -278,8 +278,9 @@
         "print(\"   - rank.py\")\n",
         "print(\"   - files/qrels_50_Queries\")\n",
         "print(\"   - files/queriesROBUST.txt\")\n",
-        "print(\"   - index/RobustPyserini/ (entire directory)\")\n",
         "print(\"\\n💡 Note: After cloning the repo, we'll change to text-retrieval/ex4/ directory\")\n",
+        "print(\"\\n📦 Index: Using pyserini prebuilt index 'robust04' (no local index needed)\")\n",
+        "print(\"   The index will be automatically downloaded on first use.\")\n",
         "print(\"\\n\" + \"=\"*60)"
       ]
     },
