--- a/ex4/LightGBMRankingSearch.ipynb
+++ b/ex4/LightGBMRankingSearch.ipynb
@@ -1697,6 +1697,188 @@
         "\n",
         "print(\"=\"*60)"
       ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
+      "source": [
+        "# ============================================================================\n",
+        "# Evaluate Results - MAP Only\n",
+        "# ============================================================================\n",
+        "\n",
+        "import subprocess\n",
+        "import re\n",
+        "import os\n",
+        "from pathlib import Path\n",
+        "\n",
+        "# Paths\n",
+        "QRELS_PATH = './files/qrels_50_Queries'\n",
+        "RESULTS_DIR = './results'\n",
+        "\n",
+        "# Define runs to evaluate\n",
+        "runs_to_evaluate = [\n",
+        "    ('run_1_rm3.res', 'run_1_rm3_eval.txt', 'RM3'),\n",
+        "    ('run_2_vector.res', 'run_2_vector_eval.txt', 'Vector-based'),\n",
+        "    ('run_3_lightgbm.res', 'run_3_lightgbm_eval.txt', 'LightGBM')\n",
+        "]\n",
+        "\n",
+        "print(\"=\"*60)\n",
+        "print(\"EVALUATION RESULTS - MAP (Mean Average Precision)\")\n",
+        "print(\"=\"*60)\n",
+        "print()\n",
+        "\n",
+        "# Function to find trec_eval JAR file\n",
+        "def find_trec_eval_jar():\n",
+        "    \"\"\"Find the trec_eval JAR file used by pyserini\"\"\"\n",
+        "    # Try cache directory (most reliable)\n",
+        "    cache_dir = Path.home() / '.cache' / 'pyserini' / 'eval'\n",
+        "    jar_file = cache_dir / 'jtreceval-0.0.5-jar-with-dependencies.jar'\n",
+        "    if jar_file.exists():\n",
+        "        return str(jar_file)\n",
+        "    \n",
+        "    # Try pyserini package directory\n",
+        "    try:\n",
+        "        import pyserini\n",
+        "        pyserini_dir = Path(pyserini.__file__).parent\n",
+        "        jar_file = pyserini_dir / 'resources' / 'jars' / 'jtreceval-0.0.5-jar-with-dependencies.jar'\n",
+        "        if jar_file.exists():\n",
+        "            return str(jar_file)\n",
+        "    except:\n",
+        "        pass\n",
+        "    \n",
+        "    return None\n",
+        "\n",
+        "# Function to evaluate using JAR directly\n",
+        "def evaluate_with_jar(jar_path, qrels_path, run_path, output_path):\n",
+        "    \"\"\"Evaluate using trec_eval JAR directly via Java\"\"\"\n",
+        "    cmd = [\n",
+        "        'java', '-jar', jar_path,\n",
+        "        '-q', qrels_path,\n",
+        "        run_path\n",
+        "    ]\n",
+        "    try:\n",
+        "        output = subprocess.check_output(cmd, stderr=subprocess.STDOUT, text=True, timeout=60)\n",
+        "        # Save output to file\n",
+        "        with open(output_path, 'w') as f:\n",
+        "            f.write(output)\n",
+        "        return output\n",
+        "    except subprocess.TimeoutExpired:\n",
+        "        return None\n",
+        "    except Exception as e:\n",
+        "        return None\n",
+        "\n",
+        "# Function to parse evaluation file\n",
+        "def parse_eval_file(eval_file_path):\n",
+        "    \"\"\"Parse an existing evaluation file to extract MAP\"\"\"\n",
+        "    try:\n",
+        "        with open(eval_file_path, 'r') as f:\n",
+        "            content = f.read()\n",
+        "        map_match = re.search(r'map\\s+all\\s+([\\d.]+)', content)\n",
+        "        if map_match:\n",
+        "            return float(map_match.group(1))\n",
+        "    except:\n",
+        "        pass\n",
+        "    return None\n",
+        "\n",
+        "# Step 1: Try to find JAR file\n",
+        "jar_path = find_trec_eval_jar()\n",
+        "if jar_path:\n",
+        "    print(f\"✅ Found trec_eval JAR: {jar_path}\")\n",
+        "else:\n",
+        "    print(\"⚠️  Could not find trec_eval JAR file\")\n",
+        "    print(\"   Will try to parse existing eval files if they exist\")\n",
+        "\n",
+        "print()\n",
+        "\n",
+        "# Step 2: Evaluate each run\n",
+        "results = {}\n",
+        "\n",
+        "for run_file, eval_file, method_name in runs_to_evaluate:\n",
+        "    run_path = os.path.join(RESULTS_DIR, run_file)\n",
+        "    eval_path = os.path.join(RESULTS_DIR, eval_file)\n",
+        "    \n",
+        "    # Check if .res file exists\n",
+        "    if not os.path.exists(run_path):\n",
+        "        print(f\"⚠️  {method_name:20s} ({run_file}): File not found\")\n",
+        "        results[method_name] = None\n",
+        "        continue\n",
+        "    \n",
+        "    map_score = None\n",
+        "    \n",
+        "    # Try method 1: Check if evaluation file already exists\n",
+        "    if os.path.exists(eval_path):\n",
+        "        map_score = parse_eval_file(eval_path)\n",
+        "        if map_score is not None:\n",
+        "            results[method_name] = map_score\n",
+        "            print(f\"✅ {method_name:20s} ({run_file}): MAP = {map_score:.4f} (from existing file)\")\n",
+        "            continue\n",
+        "    \n",
+        "    # Try method 2: Use JAR directly to evaluate\n",
+        "    if jar_path and os.path.exists(jar_path):\n",
+        "        print(f\"   Evaluating {method_name}...\", end=' ')\n",
+        "        output = evaluate_with_jar(jar_path, QRELS_PATH, run_path, eval_path)\n",
+        "        if output:\n",
+        "            map_score = parse_eval_file(eval_path)\n",
+        "            if map_score is not None:\n",
+        "                results[method_name] = map_score\n",
+        "                print(f\"✅ MAP = {map_score:.4f}\")\n",
+        "                continue\n",
+        "        print(\"❌ Failed\")\n",
+        "    \n",
+        "    # Try method 3: Run trec_eval.sh (may fail on Python 3.12)\n",
+        "    if map_score is None:\n",
+        "        try:\n",
+        "            # Try running just the specific command from the script\n",
+        "            cmd = ['python', '-m', 'pyserini.eval.trec_eval', '-q', QRELS_PATH, run_path]\n",
+        "            output = subprocess.check_output(cmd, stderr=subprocess.STDOUT, text=True, timeout=60)\n",
+        "            # Save output\n",
+        "            with open(eval_path, 'w') as f:\n",
+        "                f.write(output)\n",
+        "            map_score = parse_eval_file(eval_path)\n",
+        "            if map_score is not None:\n",
+        "                results[method_name] = map_score\n",
+        "                print(f\"✅ {method_name:20s} ({run_file}): MAP = {map_score:.4f}\")\n",
+        "                continue\n",
+        "        except:\n",
+        "            pass\n",
+        "    \n",
+        "    # If all methods failed\n",
+        "    if map_score is None:\n",
+        "        print(f\"❌ {method_name:20s} ({run_file}): Could not evaluate\")\n",
+        "        results[method_name] = None\n",
+        "\n",
+        "print()\n",
+        "print(\"=\"*60)\n",
+        "print(\"SUMMARY\")\n",
+        "print(\"=\"*60)\n",
+        "\n",
+        "# Sort by MAP score (descending)\n",
+        "sorted_results = sorted(\n",
+        "    [(name, score) for name, score in results.items() if score is not None],\n",
+        "    key=lambda x: x[1],\n",
+        "    reverse=True\n",
+        ")\n",
+        "\n",
+        "if sorted_results:\n",
+        "    print(\"\\nRanking by MAP:\")\n",
+        "    for rank, (method_name, map_score) in enumerate(sorted_results, 1):\n",
+        "        print(f\"  {rank}. {method_name:20s}: {map_score:.4f}\")\n",
+        "    \n",
+        "    # Find best\n",
+        "    best_method, best_map = sorted_results[0]\n",
+        "    print(f\"\\n🏆 Best Method: {best_method} (MAP = {best_map:.4f})\")\n",
+        "else:\n",
+        "    print(\"\\n❌ No valid results found\")\n",
+        "    print(\"\\n💡 Troubleshooting:\")\n",
+        "    print(\"   1. Make sure .res files exist in ./results/\")\n",
+        "    print(\"   2. Check if trec_eval JAR is available\")\n",
+        "    print(\"   3. You may need to run evaluation manually using:\")\n",
+        "    print(\"      bash trec_eval.sh\")\n",
+        "\n",
+        "print(\"=\"*60)\n"
+      ]
     }
   ],
   "metadata": {
