--- a/ex4/LightGBMRankingSearch.ipynb
+++ b/ex4/LightGBMRankingSearch.ipynb
@@ -586,6 +586,56 @@
         "    \n",
         "    print(\"✅ Data types converted\")\n",
         "    print(df.dtypes)\n",
+        "    \n",
+        "    # ============================================================================\n",
+        "    # Feature Engineering for LightGBM\n",
+        "    # ============================================================================\n",
+        "    print(\"\\n🔧 Adding feature engineering...\")\n",
+        "    \n",
+        "    # Score transformations\n",
+        "    df['log_score'] = np.log1p(df['score'])\n",
+        "    df['score_squared'] = df['score'] ** 2\n",
+        "    df['sqrt_score'] = np.sqrt(df['score'])\n",
+        "    \n",
+        "    # Rank transformations\n",
+        "    df['rank_inverse'] = 1.0 / df['rank']\n",
+        "    df['rank_log'] = np.log1p(df['rank'])\n",
+        "    df['rank_squared'] = df['rank'] ** 2\n",
+        "    \n",
+        "    # Combined features\n",
+        "    df['score_per_rank'] = df['score'] / df['rank']\n",
+        "    df['score_rank_product'] = df['score'] * (1.0 / df['rank'])\n",
+        "    df['score_rank_ratio'] = df['score'] / (df['rank'] + 1e-10)\n",
+        "    \n",
+        "    # Position indicators (binary features)\n",
+        "    df['is_top_10'] = (df['rank'] <= 10).astype(int)\n",
+        "    df['is_top_100'] = (df['rank'] <= 100).astype(int)\n",
+        "    df['is_top_50'] = (df['rank'] <= 50).astype(int)\n",
+        "    \n",
+        "    # Normalized features (per query group)\n",
+        "    # Score normalization per query\n",
+        "    df['score_norm'] = df.groupby('query_id')['score'].transform(\n",
+        "        lambda x: (x - x.min()) / (x.max() - x.min() + 1e-10)\n",
+        "    )\n",
+        "    \n",
+        "    # Rank normalization per query\n",
+        "    df['rank_norm'] = df.groupby('query_id')['rank'].transform(\n",
+        "        lambda x: (x - x.min()) / (x.max() - x.min() + 1e-10)\n",
+        "    )\n",
+        "    \n",
+        "    # Z-score normalization per query\n",
+        "    df['score_zscore'] = df.groupby('query_id')['score'].transform(\n",
+        "        lambda x: (x - x.mean()) / (x.std() + 1e-10)\n",
+        "    )\n",
+        "    \n",
+        "    # Percentile rank per query\n",
+        "    df['score_percentile'] = df.groupby('query_id')['score'].transform(\n",
+        "        lambda x: x.rank(pct=True)\n",
+        "    )\n",
+        "    \n",
+        "    print(f\"✅ Feature engineering completed\")\n",
+        "    print(f\"   Total features: {len([col for col in df.columns if col not in ['query_id', 'doc_id', 'relevance']])}\")\n",
+        "    print(f\"   Feature columns: {[col for col in df.columns if col not in ['query_id', 'doc_id', 'relevance']]}\")\n",
         "else:\n",
         "    print(\"Skipping type conversion (LightGBM not enabled)\")"
       ]
@@ -1091,12 +1141,24 @@
         "if RUN_LIGHTGBM:\n",
         "    gbm = lgb.LGBMRanker(\n",
         "        boosting_type=\"gbdt\",\n",
-        "        learning_rate=0.1,\n",
-        "        n_estimators=100,\n",
+        "        learning_rate=0.05,           # Reduced from 0.1 for more careful learning\n",
+        "        n_estimators=300,              # Increased from 100 for better performance\n",
+        "        num_leaves=31,                 # Controls model complexity\n",
+        "        max_depth=7,                   # Prevents overfitting\n",
+        "        min_child_samples=20,          # Minimum samples per leaf\n",
+        "        subsample=0.8,                 # Row sampling to prevent overfitting\n",
+        "        colsample_bytree=0.8,          # Feature sampling\n",
+        "        reg_alpha=0.1,                 # L1 regularization\n",
+        "        reg_lambda=0.1,                # L2 regularization\n",
         "        objective=\"lambdarank\",\n",
-        "        metric=\"ndcg\"\n",
+        "        metric=\"ndcg\",\n",
+        "        ndcg_eval_at=[5, 10, 20],      # Evaluate at multiple cutoffs\n",
+        "        verbose=1\n",
         "    )\n",
-        "    print(\"✅ LightGBM Ranker initialized\")\n",
+        "    print(\"✅ LightGBM Ranker initialized with improved hyperparameters\")\n",
+        "    print(\"   Learning rate: 0.05 (reduced)\")\n",
+        "    print(\"   N estimators: 300 (increased)\")\n",
+        "    print(\"   Added regularization and sampling\")\n",
         "else:\n",
         "    print(\"Skipping LightGBM initialization (not enabled)\")"
       ]
