--- a/ex4/LightGBMRankingSearch.ipynb
+++ b/ex4/LightGBMRankingSearch.ipynb
@@ -186,6 +186,16 @@
         "subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"lightgbm\"])\n",
         "print(\"✅ LightGBM installed\")\n",
         "\n",
+        "# Fix Pillow (PIL) compatibility issue\n",
+        "# Pillow 12.0.0+ removed _Ink from PIL._typing, causing import errors with matplotlib\n",
+        "# Downgrade to compatible version and upgrade matplotlib\n",
+        "print(\"Fixing Pillow (PIL) compatibility...\")\n",
+        "subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"Pillow<12.0.0\", \"--upgrade\"])\n",
+        "print(\"✅ Pillow downgraded to compatible version (<12.0.0)\")\n",
+        "print(\"Upgrading matplotlib for compatibility...\")\n",
+        "subprocess.check_call([sys.executable, \"-m\", \"pip\", \"install\", \"--upgrade\", \"matplotlib\"])\n",
+        "print(\"✅ Matplotlib updated\")\n",
+        "\n",
         "print(\"\\n✅ All packages installed successfully!\")\n",
         "print(\"\\n⚠️  IMPORTANT: If you get Java version errors, restart the runtime:\")\n",
         "print(\"   Runtime → Restart runtime (or press Ctrl+M .)\")\n",
@@ -194,7 +204,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 9,
       "metadata": {
         "id": "5vm_n6adZXCl"
       },
@@ -654,12 +664,32 @@
         "\n",
         "    train_queries = []\n",
         "\n",
-        "    all_queries = df['query_id'].unique()\n",
-        "    print(f\"Total unique queries: {len(all_queries)}\")\n",
-        "    print(f\"Using first {N_labeled} queries for training\")\n",
+        "    # FIX: Load ALL queries from the queries file, not just from the merged dataframe\n",
+        "    # This ensures we process ALL 249 queries, even if some are missing from baseline\n",
+        "    from pyserini.search import get_topics_with_reader\n",
+        "    topic_file_path = f\"{FILES_DIR}/queriesROBUST.txt\"\n",
+        "    topics = get_topics_with_reader(\n",
+        "        \"io.anserini.search.topicreader.TsvIntTopicReader\", topic_file_path\n",
+        "    )\n",
+        "    # Fix query ids (same logic as in rank.py)\n",
+        "    all_queries_list = []\n",
+        "    for topic_id, topic in topics.items():\n",
+        "        fixed_topic_id = str(topic_id)\n",
+        "        if len(fixed_topic_id) == 2:\n",
+        "            fixed_topic_id = \"0\" + str(topic_id)\n",
+        "        all_queries_list.append(int(fixed_topic_id))\n",
+        "    \n",
+        "    all_queries = sorted(all_queries_list)\n",
+        "    print(f\"Total unique queries from file: {len(all_queries)}\")\n",
+        "    print(f\"Queries in baseline dataframe: {df['query_id'].nunique()}\")\n",
+        "    \n",
+        "    # Get queries that exist in df for training\n",
+        "    df_queries = set(df['query_id'].unique())\n",
+        "    print(f\"Using first {N_labeled} queries for training (that exist in baseline)\")\n",
         "    \n",
         "    for query_id in all_queries[:N_labeled]:\n",
-        "        train_queries.append(df.loc[(df['query_id'] == query_id)][:int(N_max/N_labeled)])\n",
+        "        if query_id in df_queries:\n",
+        "            train_queries.append(df.loc[(df['query_id'] == query_id)][:int(N_max/N_labeled)])\n",
         "    \n",
         "    print(f\"Prepared {len(train_queries)} training query sets\")\n",
         "else:\n",
@@ -1641,10 +1671,13 @@
         "if RUN_LIGHTGBM:\n",
         "    print(\"Generating predictions for all queries...\")\n",
         "    results_out = []\n",
+        "    missing_queries = []\n",
         "\n",
         "    for query_id in tqdm(all_queries, desc=\"Predicting\", unit=\"query\"):\n",
         "        df_test = df.loc[(df['query_id'] == query_id)][:1000]\n",
         "        if len(df_test) == 0:\n",
+        "            # Query missing from baseline - track it\n",
+        "            missing_queries.append(query_id)\n",
         "            continue\n",
         "            \n",
         "        X_test = df_test.drop(['doc_id', 'query_id', 'relevance'], axis=1)\n",
@@ -1664,6 +1697,13 @@
         "            results_out.append(f\"{query_id} Q0 {doc_id} {new_rank} {new_score} run3\")\n",
         "    \n",
         "    print(f\"✅ Generated {len(results_out)} predictions\")\n",
+        "    print(f\"   Total queries processed: {len(all_queries)}\")\n",
+        "    print(f\"   Queries with results: {len(all_queries) - len(missing_queries)}\")\n",
+        "    if missing_queries:\n",
+        "        print(f\"   ⚠️  Missing queries from baseline: {len(missing_queries)}\")\n",
+        "        print(f\"      Missing query IDs: {missing_queries[:10]}{'...' if len(missing_queries) > 10 else ''}\")\n",
+        "    print(f\"   Expected lines: {len(all_queries) * 1000}\")\n",
+        "    print(f\"   Actual lines: {len(results_out)}\")\n",
         "else:\n",
         "    print(\"Skipping predictions (LightGBM not enabled)\")"
       ]
